--- a/all_light/logstash_all_light.conf
+++ b/all_light/logstash_all_light.conf
@@ -18,7 +18,7 @@ filter {
 }
 
 output {
-        if [logTime] != "" {
+        if [complex] =~ /.+/ {
 
                 elasticsearch {
                         hosts => ["http://203.245.157.103:9200"]
