--- a/aiq_logcomplex_address.conf
+++ b/aiq_logcomplex_address.conf
@@ -15,10 +15,9 @@ filter {
 output {
     if [complex] =~ /.+/ {
                 elasticsearch {
-                        hosts => ["http://203.245.157.103:9200"]
+                        hosts => ["http://localhost:9200"]
                         index => "bg_idx_smarthome_mobile_service_usage_202108_1"
-                        user =>"elastic"
-                        password => "poscoenc!"
+                        
                 }
                 csv {
                         fields => ["service", "type", "complex" , "address"]
