--- a/sdtpark/es_index_all_types.conf
+++ b/sdtpark/es_index_all_types.conf
@@ -18,10 +18,9 @@ filter {
 output {
     if [complex] =~ /.+/ {
                 elasticsearch {
-                        hosts => ["http://203.245.157.103:9200"]
+                        hosts => ["http://localhost:9200"]
                         index => "bg_idx_alltypes_sdtparkcity_m0102"
-                        user =>"elastic"
-                        password => "poscoenc!"
+
                 }
         }
 }
