--- a/mobileservices/aiq.conf
+++ b/mobileservices/aiq.conf
@@ -22,9 +22,8 @@ filter {
 output {
         elasticsearch {
                 action => "index"
-                hosts => ["http://203.245.157.103:9200"]
+                hosts => ["http://localhost:9200"]
                 index => "bg_idx_mobile_service_m202108"
-                user =>"elastic"
-                password => "poscoenc!"
+                
         }
 }
