--- a/20231q/messagefilter.conf
+++ b/20231q/messagefilter.conf
@@ -7,7 +7,7 @@ input {
 }
 filter {
         grok { match => { "message" => [
-		'^(?<timeinfo>\d+-\d+-\d+.\d+:\d+:\d+).+?(?<appID>[[0-9a-zA-Z-]*]).(?<att1>[[0-9a-zA-Z-]*):.(?<att2>[[0-9a-zA-Z-_ \"]*):?(?<att3>[[0-9a-zA-Z-_ \"\/=<>,().]*):?(?<att4>[[0-9a-zA-Z-_ \"\/=<>,().]*)'
+		'^(?<timeinfo>\d+-\d+-\d+.\d+:\d+:\d+).+?(?<appID>[[0-9A-Z-]*]).(?<att1>[0-9a-zA-Z-_]*):.(?<att2>[0-9a-zA-Z-_ \"]*):?(?<att3>[0-9a-zA-Z-_ \"\/=<>,().]*):?(?<att4>[0-9a-zA-Z-_ \"\/=<>,().]*)'
 	] }}
 }
 
