--- a/20231q/filter04.conf
+++ b/20231q/filter04.conf
@@ -6,9 +6,12 @@ input {
   }
 }
 filter {
-        grok { match => { "message" => [
-			'\A%{TIMESTAMP_ISO8601:timeinfo} %{TIMESTAMP_ISO8601:timeinfo_client} %{IPV4:client_ip} \[%{JAVAMETHOD:appID}-%{WORD:message_level}] %{JAVAFILE:service_name}: %{JAVALOGMESSAGE:msg01}'
-        ] }}
+        grok { 
+        		match => { "message" => [
+				'\A%{TIMESTAMP_ISO8601:timeinfo} %{TIMESTAMP_ISO8601:timeinfo_client} %{IPV4:client_ip} \[%{JAVAMETHOD:appID}-%{WORD:message_level}] %{JAVAFILE:service_name}: %{JAVALOGMESSAGE:msg01}'
+        		] }
+				remove_field => ["message"]
+        }
 
         if [msg01] =~ "<CmdResult" {
         	xml {
@@ -24,7 +27,6 @@ filter {
 						"data_type" => "%{[CmdResult][Cmd][0][DataType][0]}"
 						"airplaine_id" => "%{[CmdResult][AirplaneId][0]}"
 		 	 	}
-
 		 	}
 		 	mutate {
 		 		remove_field => ["CmdResult"]
@@ -72,11 +74,12 @@ filter {
 				#convert => ["[location][lon]","float"]
 			}
 		}
+		mutate {
+    		remove_field => ["host", "@timestamp"]
+		}
 }
-
 output {  
 	if [msg01] =~ "file downlink" or [msg01] =~"<CmdResult" or [msg01] =~ "navLatitude" {
 		stdout { codec => rubydebug }
-
 	}
 }
